--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^4.2.9
   firebase_storage: ^11.0.14
   cloud_firestore: ^4.4.3
+  fluttertoast: ^8.2.1
+  flutter_svg: ^1.1.6
+  provider: ^6.0.5
+
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
